Improvement: style.css (tabs correctly merge with content on small screens); Improvement: User (error handling);

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -63,6 +63,7 @@
 .tab-selected {
     border-bottom: 1px solid lightseagreen;
     background-color: lightseagreen;
+    top: 3px;
 }
 
 .tab-title-thin {
